Complete resume page

--- a/resume.html
+++ b/resume.html
@@ -72,7 +72,7 @@
     <!-- Main section -->
 
     <main>
-      <div class="container mt-5">
+      <div class="container mt-5 profile-main-section fixed-top">
         <div class="row">
           <div class="col-12 mt-5">
             <h3 class="text-center">
@@ -82,7 +82,7 @@
             </h3>
           </div>
         </div>
-        <div class="row">
+        <div class="row mt-4">
           <div class="col-4">
             <div class="d-flex align-items-center mb-2">
               <img
@@ -97,175 +97,78 @@
             <div class="timeline-font">Oct 2017 - Present</div>
           </div>
           <div class="col-8">
-            <div>
-              Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-              Provident beatae assumenda voluptate recusandae. Aspernatur illo
-              itaque ratione commodi cumque odit sunt soluta sapiente? Esse modi
-              tempore nobis. In, cum hic. Lorem ipsum dolor sit amet,
-              consectetur adipisicing elit. Sequi dolor assumenda officiis
-              reprehenderit eaque, autem cupiditate molestiae inventore
-              exercitationem debitis et maxime laborum repellat ullam totam
-              possimus animi, quo rerum. Lorem ipsum dolor sit amet consectetur
-              adipisicing elit. Rerum harum distinctio neque inventore maxime
-              doloremque earum cupiditate sequi. Quidem maiores, vero delectus
-              culpa aperiam dolorem fugit minus fugiat dolor quaerat. Lorem
-              ipsum, dolor sit amet consectetur adipisicing elit. Provident
-              beatae assumenda voluptate recusandae. Aspernatur illo itaque
-              ratione commodi cumque odit sunt soluta sapiente? Esse modi
-              tempore nobis. In, cum hic. Lorem ipsum dolor sit amet,
-              consectetur adipisicing elit. Sequi dolor assumenda officiis
-              reprehenderit eaque, autem cupiditate molestiae inventore
-              exercitationem debitis et maxime laborum repellat ullam totam
-              possimus animi, quo rerum. Lorem ipsum dolor sit amet consectetur
-              adipisicing elit. Rerum harum distinctio neque inventore maxime
-              doloremque earum cupiditate sequi. Quidem maiores, vero delectus
-              culpa aperiam dolorem fugit minus fugiat dolor quaerat. Lorem
-              ipsum, dolor sit amet consectetur adipisicing elit. Provident
-              beatae assumenda voluptate recusandae. Aspernatur illo itaque
-              ratione commodi cumque odit sunt soluta sapiente? Esse modi
-              tempore nobis. In, cum hic. Lorem ipsum dolor sit amet,
-              consectetur adipisicing elit. Sequi dolor assumenda officiis
-              reprehenderit eaque, autem cupiditate molestiae inventore
-              exercitationem debitis et maxime laborum repellat ullam totam
-              possimus animi, quo rerum. Lorem ipsum dolor sit amet consectetur
-              adipisicing elit. Rerum harum distinctio neque inventore maxime
-              doloremque earum cupiditate sequi. Quidem maiores, vero delectus
-              culpa aperiam dolorem fugit minus fugiat dolor quaerat. Lorem
-              ipsum, dolor sit amet consectetur adipisicing elit. Provident
-              beatae assumenda voluptate recusandae. Aspernatur illo itaque
-              ratione commodi cumque odit sunt soluta sapiente? Esse modi
-              tempore nobis. In, cum hic. Lorem ipsum dolor sit amet,
-              consectetur adipisicing elit. Sequi dolor assumenda officiis
-              reprehenderit eaque, autem cupiditate molestiae inventore
-              exercitationem debitis et maxime laborum repellat ullam totam
-              possimus animi, quo rerum. Lorem ipsum dolor sit amet consectetur
-              adipisicing elit. Rerum harum distinctio neque inventore maxime
-              doloremque earum cupiditate sequi. Quidem maiores, vero delectus
-              culpa aperiam dolorem fugit minus fugiat dolor quaerat. Lorem
-              ipsum, dolor sit amet consectetur adipisicing elit. Provident
-              beatae assumenda voluptate recusandae. Aspernatur illo itaque
-              ratione commodi cumque odit sunt soluta sapiente? Esse modi
-              tempore nobis. In, cum hic. Lorem ipsum dolor sit amet,
-              consectetur adipisicing elit. Sequi dolor assumenda officiis
-              reprehenderit eaque, autem cupiditate molestiae inventore
-              exercitationem debitis et maxime laborum repellat ullam totam
-              possimus animi, quo rerum. Lorem ipsum dolor sit amet consectetur
-              adipisicing elit. Rerum harum distinctio neque inventore maxime
-              doloremque earum cupiditate sequi. Quidem maiores, vero delectus
-              culpa aperiam dolorem fugit minus fugiat dolor quaerat. Lorem
-              ipsum, dolor sit amet consectetur adipisicing elit. Provident
-              beatae assumenda voluptate recusandae. Aspernatur illo itaque
-              ratione commodi cumque odit sunt soluta sapiente? Esse modi
-              tempore nobis. In, cum hic. Lorem ipsum dolor sit amet,
-              consectetur adipisicing elit. Sequi dolor assumenda officiis
-              reprehenderit eaque, autem cupiditate molestiae inventore
-              exercitationem debitis et maxime laborum repellat ullam totam
-              possimus animi, quo rerum. Lorem ipsum dolor sit amet consectetur
-              adipisicing elit. Rerum harum distinctio neque inventore maxime
-              doloremque earum cupiditate sequi. Quidem maiores, vero delectus
-              culpa aperiam dolorem fugit minus fugiat dolor quaerat. Lorem
-              ipsum, dolor sit amet consectetur adipisicing elit. Provident
-              beatae assumenda voluptate recusandae. Aspernatur illo itaque
-              ratione commodi cumque odit sunt soluta sapiente? Esse modi
-              tempore nobis. In, cum hic. Lorem ipsum dolor sit amet,
-              consectetur adipisicing elit. Sequi dolor assumenda officiis
-              reprehenderit eaque, autem cupiditate molestiae inventore
-              exercitationem debitis et maxime laborum repellat ullam totam
-              possimus animi, quo rerum. Lorem ipsum dolor sit amet consectetur
-              adipisicing elit. Rerum harum distinctio neque inventore maxime
-              doloremque earum cupiditate sequi. Quidem maiores, vero delectus
-              culpa aperiam dolorem fugit minus fugiat dolor quaerat. Lorem
-              ipsum, dolor sit amet consectetur adipisicing elit. Provident
-              beatae assumenda voluptate recusandae. Aspernatur illo itaque
-              ratione commodi cumque odit sunt soluta sapiente? Esse modi
-              tempore nobis. In, cum hic. Lorem ipsum dolor sit amet,
-              consectetur adipisicing elit. Sequi dolor assumenda officiis
-              reprehenderit eaque, autem cupiditate molestiae inventore
-              exercitationem debitis et maxime laborum repellat ullam totam
-              possimus animi, quo rerum. Lorem ipsum dolor sit amet consectetur
-              adipisicing elit. Rerum harum distinctio neque inventore maxime
-              doloremque earum cupiditate sequi. Quidem maiores, vero delectus
-              culpa aperiam dolorem fugit minus fugiat dolor quaerat. Lorem
-              ipsum, dolor sit amet consectetur adipisicing elit. Provident
-              beatae assumenda voluptate recusandae. Aspernatur illo itaque
-              ratione commodi cumque odit sunt soluta sapiente? Esse modi
-              tempore nobis. In, cum hic. Lorem ipsum dolor sit amet,
-              consectetur adipisicing elit. Sequi dolor assumenda officiis
-              reprehenderit eaque, autem cupiditate molestiae inventore
-              exercitationem debitis et maxime laborum repellat ullam totam
-              possimus animi, quo rerum. Lorem ipsum dolor sit amet consectetur
-              adipisicing elit. Rerum harum distinctio neque inventore maxime
-              doloremque earum cupiditate sequi. Quidem maiores, vero delectus
-              culpa aperiam dolorem fugit minus fugiat dolor quaerat.\ Lorem
-              ipsum, dolor sit amet consectetur adipisicing elit. Provident
-              beatae assumenda voluptate recusandae. Aspernatur illo itaque
-              ratione commodi cumque odit sunt soluta sapiente? Esse modi
-              tempore nobis. In, cum hic. Lorem ipsum dolor sit amet,
-              consectetur adipisicing elit. Sequi dolor assumenda officiis
-              reprehenderit eaque, autem cupiditate molestiae inventore
-              exercitationem debitis et maxime laborum repellat ullam totam
-              possimus animi, quo rerum. Lorem ipsum dolor sit amet consectetur
-              adipisicing elit. Rerum harum distinctio neque inventore maxime
-              doloremque earum cupiditate sequi. Quidem maiores, vero delectus
-              culpa aperiam dolorem fugit minus fugiat dolor quaerat. Lorem
-              ipsum, dolor sit amet consectetur adipisicing elit. Provident
-              beatae assumenda voluptate recusandae. Aspernatur illo itaque
-              ratione commodi cumque odit sunt soluta sapiente? Esse modi
-              tempore nobis. In, cum hic. Lorem ipsum dolor sit amet,
-              consectetur adipisicing elit. Sequi dolor assumenda officiis
-              reprehenderit eaque, autem cupiditate molestiae inventore
-              exercitationem debitis et maxime laborum repellat ullam totam
-              possimus animi, quo rerum. Lorem ipsum dolor sit amet consectetur
-              adipisicing elit. Rerum harum distinctio neque inventore maxime
-              doloremque earum cupiditate sequi. Quidem maiores, vero delectus
-              culpa aperiam dolorem fugit minus fugiat dolor quaerat. Lorem
-              ipsum, dolor sit amet consectetur adipisicing elit. Provident
-              beatae assumenda voluptate recusandae. Aspernatur illo itaque
-              ratione commodi cumque odit sunt soluta sapiente? Esse modi
-              tempore nobis. In, cum hic. Lorem ipsum dolor sit amet,
-              consectetur adipisicing elit. Sequi dolor assumenda officiis
-              reprehenderit eaque, autem cupiditate molestiae inventore
-              exercitationem debitis et maxime laborum repellat ullam totam
-              possimus animi, quo rerum. Lorem ipsum dolor sit amet consectetur
-              adipisicing elit. Rerum harum distinctio neque inventore maxime
-              doloremque earum cupiditate sequi. Quidem maiores, vero delectus
-              culpa aperiam dolorem fugit minus fugiat dolor quaerat. Lorem
-              ipsum, dolor sit amet consectetur adipisicing elit. Provident
-              beatae assumenda voluptate recusandae. Aspernatur illo itaque
-              ratione commodi cumque odit sunt soluta sapiente? Esse modi
-              tempore nobis. In, cum hic. Lorem ipsum dolor sit amet,
-              consectetur adipisicing elit. Sequi dolor assumenda officiis
-              reprehenderit eaque, autem cupiditate molestiae inventore
-              exercitationem debitis et maxime laborum repellat ullam totam
-              possimus animi, quo rerum. Lorem ipsum dolor sit amet consectetur
-              adipisicing elit. Rerum harum distinctio neque inventore maxime
-              doloremque earum cupiditate sequi. Quidem maiores, vero delectus
-              culpa aperiam dolorem fugit minus fugiat dolor quaerat. Lorem
-              ipsum, dolor sit amet consectetur adipisicing elit. Provident
-              beatae assumenda voluptate recusandae. Aspernatur illo itaque
-              ratione commodi cumque odit sunt soluta sapiente? Esse modi
-              tempore nobis. In, cum hic. Lorem ipsum dolor sit amet,
-              consectetur adipisicing elit. Sequi dolor assumenda officiis
-              reprehenderit eaque, autem cupiditate molestiae inventore
-              exercitationem debitis et maxime laborum repellat ullam totam
-              possimus animi, quo rerum. Lorem ipsum dolor sit amet consectetur
-              adipisicing elit. Rerum harum distinctio neque inventore maxime
-              doloremque earum cupiditate sequi. Quidem maiores, vero delectus
-              culpa aperiam dolorem fugit minus fugiat dolor quaerat. Lorem
-              ipsum, dolor sit amet consectetur adipisicing elit. Provident
-              beatae assumenda voluptate recusandae. Aspernatur illo itaque
-              ratione commodi cumque odit sunt soluta sapiente? Esse modi
-              tempore nobis. In, cum hic. Lorem ipsum dolor sit amet,
-              consectetur adipisicing elit. Sequi dolor assumenda officiis
-              reprehenderit eaque, autem cupiditate molestiae inventore
-              exercitationem debitis et maxime laborum repellat ullam totam
-              possimus animi, quo rerum. Lorem ipsum dolor sit amet consectetur
-              adipisicing elit. Rerum harum distinctio neque inventore maxime
-              doloremque earum cupiditate sequi. Quidem maiores, vero delectus
-              culpa aperiam dolorem fugit minus fugiat dolor quaerat.
+            <div class="profile-section overflow-auto">
+              <div class="mb-4"><h5>Senior Software Engineer</h5>
+                <p>Jan 2020 - Present <span class="font-italic">(Fulltime)</span></p>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                  Provident beatae assumenda voluptate recusandae. Aspernatur illo
+                  itaque ratione commodi cumque odit sunt soluta sapiente? Esse modi
+                  tempore nobis. In, cum hic. Lorem ipsum dolor sit amet,
+                  consectetur adipisicing elit.
+                </p>
+                
+                <h6 class="font-weight-bold">Tools</h6>
+                <p><img src="assets/images//docker.svg" alt="docker"></p>
+  
+                <h6 class="font-weight-bold">Projects</h6>
+                <ul class="list-group list-group-flush">
+                  <li class="list-group-item"><span class="mr-3">&#9642;</span><a href="#">Project 1</a></li>
+                  <li class="list-group-item"><span class="mr-3">&#9642;</span><a href="#">Project 2</a></li>
+                  <li class="list-group-item"><span class="mr-3">&#9642;</span><a href="#">Project 3</a></li>
+                </ul>
+  
+                <h6 class="font-weight-bold">Accomlishments</h6>
+                <ul class="list-group list-group-flush">
+                  <li class="list-group-item"><span class="mr-3">&#9642;</span><a href="#">Accomplishment 1</a></li>
+                  <li class="list-group-item"><span class="mr-3">&#9642;</span><a href="#">Accomplishment 2</a></li>
+                  <li class="list-group-item"><span class="mr-3">&#9642;</span><a href="#">Accomplishment 3</a></li>
+                </ul>
+  
+                <h6 class="font-weight-bold">Recognitions</h6>
+                <ul class="list-group list-group-flush">
+                  <li class="list-group-item"><span class="mr-3">&#9642;</span><a href="#">Recognition 1</a></li>
+                  <li class="list-group-item"><span class="mr-3">&#9642;</span><a href="#">Recognition 2</a></li>
+                  <li class="list-group-item"><span class="mr-3">&#9642;</span><a href="#">Recognition 3</a></li>
+                </ul></div>
+
+              <div class="mb-4"><h5>Senior Software Engineer</h5>
+                <p>Jan 2020 - Present <span class="font-italic">(Fulltime)</span></p>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                  Provident beatae assumenda voluptate recusandae. Aspernatur illo
+                  itaque ratione commodi cumque odit sunt soluta sapiente? Esse modi
+                  tempore nobis. In, cum hic. Lorem ipsum dolor sit amet,
+                  consectetur adipisicing elit.
+                </p>
+                
+                <h6 class="font-weight-bold">Tools</h6>
+                <p><img src="assets/images//docker.svg" alt="docker"></p>
+  
+                <h6 class="font-weight-bold">Projects</h6>
+                <ul class="list-group list-group-flush">
+                  <li class="list-group-item"><span class="mr-3">&#9642;</span><a href="#">Project 1</a></li>
+                  <li class="list-group-item"><span class="mr-3">&#9642;</span><a href="#">Project 2</a></li>
+                  <li class="list-group-item"><span class="mr-3">&#9642;</span><a href="#">Project 3</a></li>
+                </ul>
+  
+                <h6 class="font-weight-bold">Accomlishments</h6>
+                <ul class="list-group list-group-flush">
+                  <li class="list-group-item"><span class="mr-3">&#9642;</span><a href="#">Accomplishment 1</a></li>
+                  <li class="list-group-item"><span class="mr-3">&#9642;</span><a href="#">Accomplishment 2</a></li>
+                  <li class="list-group-item"><span class="mr-3">&#9642;</span><a href="#">Accomplishment 3</a></li>
+                </ul>
+  
+                <h6 class="font-weight-bold">Recognitions</h6>
+                <ul class="list-group list-group-flush">
+                  <li class="list-group-item"><span class="mr-3">&#9642;</span><a href="#">Recognition 1</a></li>
+                  <li class="list-group-item"><span class="mr-3">&#9642;</span><a href="#">Recognition 2</a></li>
+                  <li class="list-group-item"><span class="mr-3">&#9642;</span><a href="#">Recognition 3</a></li>
+                </ul></div>
             </div>
           </div>
         </div>
+      </div>
+      <div class="print-icon">
+        <img src="assets/images/print.svg" width="50" alt="Print resume icon">
       </div>
     </main>
 
