--- a/resume.html
+++ b/resume.html
@@ -72,33 +72,34 @@
     <!-- Main section -->
 
     <main>
-      <div class="container mt-5 profile-main-section fixed-top">
+      <div class="container mt-md-5 profile-main-section fixed-top">
         <div class="row">
           <div class="col-12 mt-5">
             <h3 class="text-center">
-              <img src="assets/images/line.svg" alt="Line" />
-              <span class="px-2">My Professional Experiences</span>
-              <img src="assets/images/line.svg" alt="Line" />
+              <img src="assets/images/line.svg" class="line" alt="Line" />
+              <span class="px-2 header">My Professional Experiences</span>
+              <img src="assets/images/line.svg" class="line" alt="Line" />
             </h3>
           </div>
         </div>
-        <div class="row mt-4">
-          <div class="col-4">
-            <div class="d-flex align-items-center mb-2">
+        <div class="row mt-md-4">
+          <div class="col-md-4">
+            <div class="d-flex align-items-center mb-md-2 company">
               <img
-                class="mr-2"
+                class="mr-md-2"
                 src="assets/images/logo.svg"
                 width="26"
                 alt="Logo"
               />
               <span class="logo-text">Andela</span>
             </div>
-            <div class="font-weight-bold address-font mb-2">Lagos, Nigeria</div>
+            <div class="font-weight-bold address-font mb-md-2">Lagos, Nigeria</div>
             <div class="timeline-font">Oct 2017 - Present</div>
           </div>
-          <div class="col-8">
+          <div class="col-md-8">
             <div class="profile-section overflow-auto">
-              <div class="mb-4"><h5>Senior Software Engineer</h5>
+              <div class="mb-4 details-section">
+                <h5 class="heading">Senior Software Engineer</h5>
                 <p>Jan 2020 - Present <span class="font-italic">(Fulltime)</span></p>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.
                   Provident beatae assumenda voluptate recusandae. Aspernatur illo
@@ -107,31 +108,32 @@
                   consectetur adipisicing elit.
                 </p>
                 
-                <h6 class="font-weight-bold">Tools</h6>
+                <h6 class="font-weight-bold heading-2">Tools</h6>
                 <p><img src="assets/images//docker.svg" alt="docker"></p>
   
-                <h6 class="font-weight-bold">Projects</h6>
-                <ul class="list-group list-group-flush">
-                  <li class="list-group-item"><span class="mr-3">&#9642;</span><a href="#">Project 1</a></li>
-                  <li class="list-group-item"><span class="mr-3">&#9642;</span><a href="#">Project 2</a></li>
-                  <li class="list-group-item"><span class="mr-3">&#9642;</span><a href="#">Project 3</a></li>
+                <h6 class="font-weight-bold heading-2">Projects</h6>
+                <ul class="list-group list-text mb-md-3">
+                  <li class="list-group-item"><span class="mr-3">&#42;</span><a href="#">Project 1</a></li>
+                  <li class="list-group-item"><span class="mr-3">&#42;</span><a href="#">Project 2</a></li>
+                  <li class="list-group-item"><span class="mr-3">&#42;</span><a href="#">Project 3</a></li>
                 </ul>
   
-                <h6 class="font-weight-bold">Accomlishments</h6>
-                <ul class="list-group list-group-flush">
-                  <li class="list-group-item"><span class="mr-3">&#9642;</span><a href="#">Accomplishment 1</a></li>
-                  <li class="list-group-item"><span class="mr-3">&#9642;</span><a href="#">Accomplishment 2</a></li>
-                  <li class="list-group-item"><span class="mr-3">&#9642;</span><a href="#">Accomplishment 3</a></li>
+                <h6 class="font-weight-bold heading-2">Accomlishments</h6>
+                <ul class="list-group list-text mb-md-3">
+                  <li class="list-group-item"><span class="mr-3">&#42;</span><a href="#">Accomplishment 1</a></li>
+                  <li class="list-group-item"><span class="mr-3">&#42;</span><a href="#">Accomplishment 2</a></li>
+                  <li class="list-group-item"><span class="mr-3">&#42;</span><a href="#">Accomplishment 3</a></li>
                 </ul>
   
-                <h6 class="font-weight-bold">Recognitions</h6>
-                <ul class="list-group list-group-flush">
-                  <li class="list-group-item"><span class="mr-3">&#9642;</span><a href="#">Recognition 1</a></li>
-                  <li class="list-group-item"><span class="mr-3">&#9642;</span><a href="#">Recognition 2</a></li>
-                  <li class="list-group-item"><span class="mr-3">&#9642;</span><a href="#">Recognition 3</a></li>
+                <h6 class="font-weight-bold heading-2">Recognitions</h6>
+                <ul class="list-group list-text mb-md-3">
+                  <li class="list-group-item"><span class="mr-3">&#42;</span><a href="#">Recognition 1</a></li>
+                  <li class="list-group-item"><span class="mr-3">&#42;</span><a href="#">Recognition 2</a></li>
+                  <li class="list-group-item"><span class="mr-3">&#42;</span><a href="#">Recognition 3</a></li>
                 </ul></div>
 
-              <div class="mb-4"><h5>Senior Software Engineer</h5>
+              <div class="mb-4 details-section">
+                <h5 class="heading">Senior Software Engineer</h5>
                 <p>Jan 2020 - Present <span class="font-italic">(Fulltime)</span></p>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.
                   Provident beatae assumenda voluptate recusandae. Aspernatur illo
@@ -140,35 +142,32 @@
                   consectetur adipisicing elit.
                 </p>
                 
-                <h6 class="font-weight-bold">Tools</h6>
+                <h6 class="font-weight-bold heading-2">Tools</h6>
                 <p><img src="assets/images//docker.svg" alt="docker"></p>
   
-                <h6 class="font-weight-bold">Projects</h6>
-                <ul class="list-group list-group-flush">
-                  <li class="list-group-item"><span class="mr-3">&#9642;</span><a href="#">Project 1</a></li>
-                  <li class="list-group-item"><span class="mr-3">&#9642;</span><a href="#">Project 2</a></li>
-                  <li class="list-group-item"><span class="mr-3">&#9642;</span><a href="#">Project 3</a></li>
+                <h6 class="font-weight-bold heading-2">Projects</h6>
+                <ul class="list-group list-text mb-md-3">
+                  <li class="list-group-item"><span class="mr-3">&#42;</span><a href="#">Project 1</a></li>
+                  <li class="list-group-item"><span class="mr-3">&#42;</span><a href="#">Project 2</a></li>
+                  <li class="list-group-item"><span class="mr-3">&#42;</span><a href="#">Project 3</a></li>
                 </ul>
   
-                <h6 class="font-weight-bold">Accomlishments</h6>
-                <ul class="list-group list-group-flush">
-                  <li class="list-group-item"><span class="mr-3">&#9642;</span><a href="#">Accomplishment 1</a></li>
-                  <li class="list-group-item"><span class="mr-3">&#9642;</span><a href="#">Accomplishment 2</a></li>
-                  <li class="list-group-item"><span class="mr-3">&#9642;</span><a href="#">Accomplishment 3</a></li>
+                <h6 class="font-weight-bold heading-2">Accomlishments</h6>
+                <ul class="list-group list-text mb-md-3">
+                  <li class="list-group-item"><span class="mr-3">&#42;</span><a href="#">Accomplishment 1</a></li>
+                  <li class="list-group-item"><span class="mr-3">&#42;</span><a href="#">Accomplishment 2</a></li>
+                  <li class="list-group-item"><span class="mr-3">&#42;</span><a href="#">Accomplishment 3</a></li>
                 </ul>
   
-                <h6 class="font-weight-bold">Recognitions</h6>
-                <ul class="list-group list-group-flush">
-                  <li class="list-group-item"><span class="mr-3">&#9642;</span><a href="#">Recognition 1</a></li>
-                  <li class="list-group-item"><span class="mr-3">&#9642;</span><a href="#">Recognition 2</a></li>
-                  <li class="list-group-item"><span class="mr-3">&#9642;</span><a href="#">Recognition 3</a></li>
+                <h6 class="font-weight-bold heading-2">Recognitions</h6>
+                <ul class="list-group list-text mb-md-3">
+                  <li class="list-group-item"><span class="mr-3">&#42;</span><a href="#">Recognition 1</a></li>
+                  <li class="list-group-item"><span class="mr-3">&#42;</span><a href="#">Recognition 2</a></li>
+                  <li class="list-group-item"><span class="mr-3">&#42;</span><a href="#">Recognition 3</a></li>
                 </ul></div>
             </div>
           </div>
         </div>
-      </div>
-      <div class="print-icon">
-        <img src="assets/images/print.svg" width="50" alt="Print resume icon">
       </div>
     </main>
 
@@ -227,6 +226,9 @@
           /></a>
         </li>
       </ul>
+      <div class="print-icon">
+        <img src="assets/images/print.svg" width="50" alt="Print resume icon">
+      </div>
     </footer>
   </body>
 </html>
