Fix responsiveness issues

--- a/resume.html
+++ b/resume.html
@@ -99,7 +99,7 @@
           <div class="col-md-8">
             <div class="profile-section overflow-auto">
               <div class="mb-4 details-section">
-                <h5 class="heading">Senior Software Engineer</h5>
+                <h5 class="resume-heading">Senior Software Engineer</h5>
                 <p>Jan 2020 - Present <span class="font-italic">(Fulltime)</span></p>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.
                   Provident beatae assumenda voluptate recusandae. Aspernatur illo
@@ -133,7 +133,7 @@
                 </ul></div>
 
               <div class="mb-4 details-section">
-                <h5 class="heading">Senior Software Engineer</h5>
+                <h5 class="resume-heading">Senior Software Engineer</h5>
                 <p>Jan 2020 - Present <span class="font-italic">(Fulltime)</span></p>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.
                   Provident beatae assumenda voluptate recusandae. Aspernatur illo
