--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <!-- Main section -->
         <main class="text-white main-section">
           <div class="container-fluid">
-            <div class="row overflow-auto main-section-content p-5">
+            <div class="row overflow-auto main-section-content p-md-5">
               <div class="col-md-9"></div>
               <div class="col-sm-12 col-md-3">
                 <div class="hidden"></div>
